--- a/package.json
+++ b/package.json
@@ -1,15 +1,58 @@
 {
   "name": "tailwind-material-3",
-  "version": "2.0.1",
-  "description": "Tailwind Material 3 is a library that provides ready-to-use UI components for Tailwind CSS users. It includes a range of customizable components such as buttons, cards, and forms, as well as useful utilities and helpers",
-  "main": "index.js",
+  "version": "3.0.0",
+  "description": "A production-ready Tailwind CSS component library that strictly follows Google Material Design 3 specifications. Built with TypeScript, design tokens, and accessibility best practices.",
+  "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/types/index.d.ts",
+        "default": "./dist/index.js"
+      },
+      "require": {
+        "types": "./dist/types/index.d.ts",
+        "default": "./dist/index.cjs"
+      }
+    },
+    "./styles": "./dist/styles.css",
+    "./tokens": {
+      "import": {
+        "types": "./dist/types/tokens/index.d.ts",
+        "default": "./dist/tokens/index.js"
+      },
+      "require": {
+        "types": "./dist/types/tokens/index.d.ts",
+        "default": "./dist/tokens/index.cjs"
+      }
+    }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE",
+    "CHANGELOG.md"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx tailwindcss -i  ./src/styles.css -o ./dist/output.css --watch    ",
-    "build": "npx tailwindcss build ./src/styles.css -o ./dist/output.css",
-    "minor": "npx tailwindcss build ./src/styles.css -o ./dist/output.css && npm version minor && npm publish  ",
-    "major": "npx tailwindcss build ./src/styles.css -o ./dist/output.css && npm version major && npm publish  ",
-    "patch": "npx tailwindcss build ./src/styles.css -o ./dist/output.css && npm version patch && npm publish  "
+    "dev": "vite build --watch",
+    "build": "npm run build:lib && npm run build:types && npm run build:css",
+    "build:lib": "vite build",
+    "build:types": "tsc --project tsconfig.build.json",
+    "build:css": "tailwindcss -i ./src/styles/index.css -o ./dist/styles.css --minify",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src --ext .ts,.tsx",
+    "lint:fix": "eslint src --ext .ts,.tsx --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx,css,md}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,css,md}\"",
+    "typecheck": "tsc --noEmit",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs",
+    "prepublishOnly": "npm run build && npm run test"
   },
   "repository": {
     "type": "git",
@@ -17,34 +60,56 @@
   },
   "keywords": [
     "tailwindcss",
-    "tailwindcss-material-colors",
-    "tailwindcss-material-icons",
-    "tailwindcss-typography",
-    "@tailwindcss/cli",
-    "@tailwindcss/forms",
-    "@tailwindcss/typography",
-    "material-colors",
-    "material 3",
-    "material icons",
-    "typography",
-    "google material 3",
-    "google material icons",
-    "dynamic colors",
-    "material-colors"
+    "material-design",
+    "material-3",
+    "material-you",
+    "design-system",
+    "component-library",
+    "ui-components",
+    "typescript",
+    "design-tokens",
+    "accessibility",
+    "a11y",
+    "wcag",
+    "google-material",
+    "tailwind-plugin",
+    "css-framework"
   ],
-  "author": "",
+  "author": "Rintu Raj C",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/rinturaj/tailwind-material-3/issues"
   },
   "homepage": "https://github.com/rinturaj/tailwind-material-3#readme",
+  "peerDependencies": {
+    "tailwindcss": "^3.3.0"
+  },
   "dependencies": {
-    "@tailwindcss/cli": "^0.1.2",
-    "deepmerge": "^4.2.2",
-    "lodash": "^4.17.21"
+    "deepmerge": "^4.3.1",
+    "tailwind-material-colors": "^1.0.1"
   },
   "devDependencies": {
-    "tailwind-material-colors": "^1.0.1",
-    "tailwindcss": "^3.3.2"
+    "@types/jest": "^29.5.11",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "^20.10.7",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "lodash": "^4.17.21",
+    "prettier": "^3.1.1",
+    "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.11",
+    "vite-plugin-dts": "^3.7.0",
+    "vitepress": "^1.0.0-rc.40"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
