--- a/package.json
+++ b/package.json
@@ -37,10 +37,9 @@
   ],
   "scripts": {
     "dev": "vite build --watch",
-    "build": "npm run build:lib && npm run build:types && npm run build:css",
+    "build": "npm run build:lib && npm run build:types",
     "build:lib": "vite build",
     "build:types": "tsc --project tsconfig.build.json",
-    "build:css": "tailwindcss -i ./src/styles/index.css -o ./dist/styles.css --minify",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -94,12 +93,14 @@
     "@types/node": "^20.10.7",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
+    "autoprefixer": "^10.4.24",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lodash": "^4.17.21",
+    "postcss": "^8.5.6",
     "prettier": "^3.1.1",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.1",
