--- a/package.json
+++ b/package.json
@@ -85,29 +85,30 @@
   },
   "dependencies": {
     "deepmerge": "^4.3.1",
-    "tailwind-material-colors": "^1.0.1"
+    "tailwind-material-colors": "^3.2.3"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.11",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/jest": "^30.0.0",
     "@types/lodash": "^4.14.202",
-    "@types/node": "^20.10.7",
-    "@typescript-eslint/eslint-plugin": "^6.18.1",
-    "@typescript-eslint/parser": "^6.18.1",
+    "@types/node": "^25.2.2",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
     "autoprefixer": "^10.4.24",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.1.3",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "lodash": "^4.17.21",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "lodash": "^4.17.23",
     "postcss": "^8.5.6",
     "prettier": "^3.1.1",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.18",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
-    "vite": "^5.0.11",
-    "vite-plugin-dts": "^3.7.0",
+    "vite": "^7.3.1",
+    "vite-plugin-dts": "^4.5.4",
     "vitepress": "^1.0.0-rc.40"
   },
   "engines": {
