--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "deepmerge": "^4.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/cli": "^4.1.18",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/jest": "^30.0.0",
     "@types/lodash": "^4.14.202",
